--- a/express-example/views/users/create.pug
+++ b/express-example/views/users/create.pug
@@ -7,7 +7,7 @@ block content
         if errors
             each error in errors
                 .alert.alert-danger=error
-        form(action="/users/create" method="POST")
+        form(action="/users/create" method="POST", enctype="multipart/form-data")
             .form-group
             Label(for="name") Name 
             input#name.form-control(type="text" name="name" value=values ? values.name : "")
@@ -15,4 +15,8 @@ block content
             .form-group
             Label(for="phone") Phone 
             input#phone.form-control(type="text" name="phone" value=values ? values.phone : "")
+
+            .form-group
+            Label(for="avatar") Avatar 
+            input#avatar.form-control-file(type="file" name="avatar")
             button.btn.btn-primary.mt-3 Create
