--- a/obo-stadium/sass/main.scss
+++ b/obo-stadium/sass/main.scss
@@ -464,6 +464,10 @@ footer .footer-link .item {
         & .title {
             margin-bottom: $twenty-pixel;
         }
+
+        & .product-row {
+            margin-right: $five-pixel;
+        }
     }
 
     .break-banner {
