--- a/obo-stadium/sass/root.scss
+++ b/obo-stadium/sass/root.scss
@@ -39,7 +39,8 @@ $fourteen-pixel: 0.875rem;
 $twelve-pixel: 0.75rem;
 $eleven-pixel: 0.6875rem;
 $ten-pixel: 0.625rem;
-$six-pixel: 0.5rem;
+$eight-pixel: 0.5rem;
+$six-pixel: 0.375rem;
 $five-pixel: 0.3125rem;
 $two-pixel: 0.125rem;
 $sixteen-pixel: 1rem;
