--- a/obo-stadium/sass/except-home-page.scss
+++ b/obo-stadium/sass/except-home-page.scss
@@ -1,63 +1,37 @@
 @import "./root.scss";
 
-header {
-    background-color: $text-dark;
-    padding: $twenty-pixel $zero-pixel;
-}
-
 main {
     margin-top: $fifty-pixel;
 }
 
-.navbar-light .navbar-nav .nav-link {
-    color: $text-white;
-
-    &:hover {
-        color: $hover-white-color;
-    }
-}
-
-.search-form {
-    margin: $zero-pixel $ten-pixel;
-    margin: auto;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link {
-    padding: $zero-pixel;
-    padding-left: $thirty-pixel;
-}
-
-.navbar-light .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-    color: white;
-}
-
-.navbar-light .navbar-toggler {
-    border-color: white;
-}
-
-.breadcrum {
+.breadcrumb {
     margin-bottom: $twenty-pixel;
-
-    & a {
-        color: $main-color;
-    }
-
-    & .arrow {
-        margin: $zero-pixel $five-pixel;
-    }
+    background-color: $text-white;
+    display: block;
+    padding-top: $zero-pixel;
+    padding-bottom: $zero-pixel;
 }
 
-@media (max-width: $large-devices-width) {
-    .navbar {
-        & .navbar-brand {
-            margin-right: $zero-pixel;
-        }
-    }
+.previous-page {
+    color: $main-color;
+}
 
+.arrow {
+    margin: $zero-pixel $five-pixel;
+}
+
+.pagination-wrapper {
+    @include flex-center-center;
+    margin-top: $fifty-pixel;
 }
 
 @media (max-width: $small-devices-width) {
+    main {
+        margin-top: $twenty-pixel;
+    }
+}
+
+@media (max-width: $medium-devices-width) {
     main {
         margin-top: $twenty-pixel;
     }
