--- a/obo-stadium/sass/main.scss
+++ b/obo-stadium/sass/main.scss
@@ -1,46 +1,57 @@
 @import "./root.scss";
 
-@mixin background-image-banner($image, $repeat, $position) {
-    background: $image $repeat $position;
+* {
+    font-family: $main-font;
+    outline: $none;
 }
 
-@mixin heading($font-size, $color, $font-weight, $line-height, $letter-spacing) {
-    font-size: $font-size;
-    color: $color;
-    font-weight: $font-weight;
-    line-height: $line-height;
-    letter-spacing: $letter-spacing;
+body {
+    color: $text-dark;
 }
 
-$header-image: url(../image/header-banner.png);
+a {
+    text-decoration: $none !important;
+    color: $text-dark;
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
-
-header {
-    @include background-image-banner($header-image, no-repeat, center top);
-    margin-bottom: $fifty-pixel;
+    &:hover {
+        color: $hover-main-color;
+    }
 }
 
-.main-heading {
-    @include heading(56px, #ffffff, bold, 4.125rem, 0.081666875rem);
-    margin: $zero-pixel;
-}
+.btn-primary {
+    background-color: $main-color;
+    border: $none;
 
-.search-form {
-    padding: $fifty-pixel $zero-pixel;
-
-    & .btn-primary {
-        padding: $twelve-pixel $twenty-four-pixel;
+    &:hover {
+        background-color: $hover-main-color;
     }
 
-    & .form-control {
-        margin-right: $twenty-pixel;
+    &:focus {
+        outline: $none;
+        box-shadow: $none;
     }
 
+    &:active {
+        background-color: $main-color !important;
+        outline: $none !important;
+        box-shadow: $none !important;
+    }
 }
 
-.title {
-    width: $one-hundred-percent;
+.form-control {
+    color: #B6B6B6;
+    height: auto;
+
+    &:focus {
+        color: #B6B6B6;
+        outline: $none;
+        box-shadow: $none;
+        border-color: inherit;
+    }
+
+    &::placeholder {
+        color: #B6B6B6;
+    }
 }
 
 .h2 {
@@ -48,334 +59,68 @@ header {
     margin-bottom: $zero-pixel;
 }
 
-.products-showcase .title,
-.categories-showcase .title,
-.latest-news .title {
-    margin-bottom: $fifty-pixel;
+footer {
+    background-color: $text-dark;
+    margin-top: $fifty-pixel;
 }
 
-.newsletter {
-    margin-top: $sixteen-pixel;
-    margin-bottom: $fifty-pixel;
-    background-color: #2F4858;
-    color: $text-white;
-
-    & .title {
-        font-size: $forty-pixel;
-        font-weight: $bold-size;
-        padding-top: $fifty-pixel;
-        line-height: 2.9375rem;
-        text-align: center;
-        color: $text-white;
-    }
-
-    & .sub-title {
-        margin: $twenty-pixel $zero-pixel;
-        text-align: center;
-        color: $text-white;
-    }
-
-    & .newsletter-form {
-        margin-bottom: $fifty-pixel;
-
-        & .form-control {
-            width: calc(100% - 160px);
-            margin-right: $twenty-pixel;
-        }
-
-        & .btn-primary {
-            padding: $ten-pixel $thirty-six-pixel;
-        }
-    }
+footer .row {
+    padding-top: $forty-pixel;
+    padding-bottom: $forty-pixel;
 }
 
-// Override Bootstrap
-
-.navbar-light .navbar-nav .nav-link {
+footer .footer-link .item {
     color: $text-white;
+    text-decoration: none;
+    padding-left: $thirty-pixel;
 
     &:hover {
         color: $hover-white-color;
     }
 }
 
-.navbar {
-    padding-top: $twenty-pixel;
-    padding-bottom: $fifty-pixel;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link {
-    padding: $zero-pixel;
-    padding-left: $thirty-pixel;
-}
-
-.navbar-light .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-    color: white;
-}
-
-.navbar-light .navbar-toggler {
-    border-color: white;
-}
-
-.btn-primary {
-    font-weight: $bold-size;
-}
-
-.products-showcase,
-.categories-showcase,
-.latest-news {
-    & .see-more-btn-text {
-        color: $dark-main-color;
-    }
-
-    & .product-row {
-        padding-left: $fifteen-pixel;
-        padding-right: $fifteen-pixel;
-        flex-wrap: nowrap;
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-        -ms-overflow-style: -ms-autohiding-scrollbar;
-    }
-
-    & .title {
-        text-transform: uppercase;
-
-        & .h2 {
-            font-weight: $bold-size;
-        }
-    }
-
-    & .categories-row {
-        & .category {
-            text-align: center;
-            margin-bottom: 2.125rem;
-
-            & .category-wrap {
-                position: relative;
-                display: inline-block;
-
-                & .tag {
-                    text-transform: uppercase;
-                    background-color: $text-white;
-                    position: absolute;
-                    font-size: $eleven-pixel;
-                    bottom: $six-pixel;
-                    left: $six-pixel;
-                    padding: $five-pixel $ten-pixel;
-                }
-            }
-        }
-    }
-
-    & .product {
-        max-width: 230px;
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-        flex: 0 0 auto;
-        margin-right: $fifteen-pixel;
-        margin-bottom: $ten-pixel;
-    }
-
-    & .news {
-        width: 285px !important;
-        display: flex !important;
-        align-items: flex-end;
-        justify-content: center;
-        flex: 0 0 auto;
-        margin-left: 10px;
-        margin-right: 10px;
-
-        & .card-img-top {
-            padding: $zero-pixel;
-        }
-
-        & .card-body {
-            padding: $sixteen-pixel $twenty-pixel $twenty-pixel $ten-pixel;
-            background-color: $text-white;
-
-            & .card-title {
-                margin-bottom: $sixteen-pixel;
-                line-height: $nineteen-pixel;
-            }
-
-            & .news-short-desc {
-                color: $text-dark;
-                line-height: $nineteen-pixel;
-            }
-
-            & .author,
-            .author .name {
-                color: $text-dark;
-                font-size: $twelve-pixel;
-
-                & .name {
-                    font-weight: $bold-size;
-                }
-            }
-        }
-    }
-
-    & .card {
-        border: 2px solid $product-border-color;
-    }
-
-    & .card-img-top {
-        padding: $zero-pixel 11px $zero-pixel 11px;
-    }
-
-    & .card-body {
-        padding: 11px 25px 11px 11px;
-        background-color: $product-content-background-color;
-
-        & .card-title {
-            font-size: $sixteen-pixel;
-            font-weight: 500;
-            line-height: 20px;
-            color: $text-dark;
-            margin-bottom: 0.6875rem;
-            height: 2.5rem;
-        }
-
-        & .card-text {
-            color: $product-text-grey;
-            margin-bottom: 0.375rem;
-        }
-
-        & .price {
-            font-size: $twenty-four-pixel;
-            font-weight: $bold-size;
-            color: $text-dark;
-            margin-bottom: $five-pixel;
-        }
-
-        & .sold {
-            margin-bottom: $zero-pixel;
-        }
-    }
-
-    & .shadow {
-        width: 90%;
-        height: $twenty-four-pixel;
-        z-index: -1;
-        background: #C4C4C4;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.13) !important;
-    }
-
-    & .category-wrap {
-        color: $text-dark;
-    }
-}
-
-.break-banner {
-    margin: $fifty-pixel $zero-pixel;
-}
-
-.slick-dotted.slick-slider {
-    margin-bottom: $zero-pixel;
-}
-
-.carousel {
-    & .slick-track {
-        margin-bottom: $ten-pixel;
-    }
-
-    & .slick-dots {
-        position: static;
-
-        & li button:before {
-            font-size: $ten-pixel;
-        }
-
-        & .slick-active {
-            & button:before {
-                color: $main-color;
-            }
-        }
-    }
-}
-
 @media (min-width: $max-width-container) {
-    .products-showcase,
-    .categories-showcase,
-    .latest-news {
-        & .product {
-            margin-right: $zero-pixel;
-        }
+    .container {
+        max-width: $max-width-container;
     }
 }
 
-@media (max-width: $medium-devices-width) {
-    .newsletter {
-        & .newsletter-form {
-            & .form-control {
-                width: 100%;
-                margin-bottom: $twenty-pixel;
-            }
-        }
+@media (max-width: $closest-medium-devices-width) {
+    footer .footer-link .item {
+        padding-left: $zero-pixel;
+        padding-top: $five-pixel;
     }
 
-    .search-form {
-        & .form-control {
-            margin-right: $zero-pixel;
-            margin-bottom: $twenty-pixel;
-        }
+    footer .row {
+        padding: $thirty-pixel;
+    }
 
+    footer .footer-link {
+        padding-top: $ten-pixel;
+    }
+
+    .navbar {
+        padding-left: $zero-pixel;
+        padding-right: $zero-pixel;
     }
 }
-
 
 @media (max-width: $small-devices-width) {
-    header {
-        margin-bottom: $twenty-pixel;
-    }
-
-    .products-showcase,
-    .categories-showcase,
-    .latest-news {
-        & .title {
-            margin-bottom: $twenty-pixel;
-        }
-
-        & .product-row {
-            margin-right: $five-pixel;
-        }
-    }
-
-    .break-banner {
-        margin: $twenty-pixel $zero-pixel;
-    }
-
-    .categories-showcase {
-        & .categories-row {
-            & .category {
-                margin-bottom: $fifteen-pixel;
-            }
-
-            & #last-category {
-                margin-bottom: $zero-pixel;
-            }
-        }
-
-    }
-
-    .newsletter {
-        margin: $twenty-pixel $zero-pixel;
-
-    }
-
     footer {
         margin-top: $twenty-pixel;
     }
 }
 
-@media (max-width: 400px) {
-    .h2 {
-        font-size: $twenty-pixel;
-    }
 
-    .see-more-btn-text {
-        font-size: $ten-pixel;
-    }
+// Override Bootstap
+
+.btn-primary:not(:disabled):not(.disabled):active {
+    border-color: inherit;
+}
+
+// Override Pretty checkbox
+
+.pretty input:checked~.state.p-success label:after,
+.pretty.p-toggle .state.p-success label:after {
+    background-color: $main-color !important;
 }
