--- a/obo-stadium/sass/root.scss
+++ b/obo-stadium/sass/root.scss
@@ -1,6 +1,4 @@
-@import "./fontawesome.scss";
-@import "./solid.scss";
-@import "./brands.scss";
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 
 $text-dark: #333333;
 $text-white: #ffffff;
@@ -8,29 +6,39 @@ $text-lighter-white: #ABACAD;
 $main-color: #F04E40;
 $lighter-grey-color: #D5D6D6;
 $dark-main-color: #C1554E;
+$light-main-color: #FEE8D8;
 $product-border-color: #FAFAFA;
 $hover-white-color: #eeeeee;
 $hover-main-color: #CE2E2F;
 $product-content-background-color: #FAFAFA;
 $product-text-grey: #767676;
+$shadow-background-color: #C4C4C4;
+$green: #12B76D;
+$dark-green: #0f985b;
+$light-green: #CEFBD4;
 
 $main-font: 'Roboto',
 sans-serif;
 
 $bold-size: bold;
+$regular-size: 500;
 
 $small-devices-width: 576px;
-$medium-devices-width: 767px;
+$closest-medium-devices-width: 767px;
+$medium-devices-width: 768px;
 $large-devices-width: 992px;
 $max-width-container: 1230px;
 $zero-pixel: 0px;
 $fifty-pixel: 3.125rem;
 $forty-seven-pixel: 2.9375rem;
+$forty-two-pixel: 2.625rem;
 $forty-pixel: 2.5rem;
 $thirty-six-pixel: 2.25rem;
 $thirty-pixel: 1.875rem;
 
+$twenty-eight-pixel: 1.75rem;
 $twenty-six-pixel: 1.625rem;
+$twenty-five-pixel: 1.5625rem;
 $twenty-four-pixel: 1.5rem;
 $twenty-pixel: 1.25rem;
 $nineteen-pixel: 1.1875rem;
@@ -42,111 +50,42 @@ $ten-pixel: 0.625rem;
 $eight-pixel: 0.5rem;
 $six-pixel: 0.375rem;
 $five-pixel: 0.3125rem;
+$four-pixel: 0.25rem;
 $two-pixel: 0.125rem;
+$one-pixel: 0.0625rem;
+
 $sixteen-pixel: 1rem;
 
 $one-hundred-percent: 100%;
 
-
 $none: none;
 $between: space-between;
 
-* {
-    font-family: $main-font;
-    outline: $none;
-    color: $text-dark;
-}
+@mixin flex-center-between {
+    display: flex;
+    justify-content: $between;
+    align-items: center;
+};
 
-a {
-    text-decoration: $none !important;
-    color: $text-dark;
+@mixin flex-baseline {
+    display: flex;
+    align-items: baseline;
+};
 
-}
+@mixin flex-center-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+};
 
-.btn-primary {
-    background-color: $main-color;
-    border: $none;
+@mixin flex-start-between {
+    display: flex;
+    align-items: flex-start;
+    justify-content: $between;
+};
 
-    &:hover {
-        background-color: $hover-main-color;
-    }
-
-    &:focus {
-        outline: $none;
-        box-shadow: $none;
-    }
-
-    &:active {
-        background-color: $main-color !important;
-        outline: $none !important;
-        box-shadow: $none !important;
-    }
-}
-
-.form-control {
-    color: #B6B6B6;
-    height: auto;
-
-    &:focus {
-        color: #B6B6B6;
-        outline: $none;
-        box-shadow: $none;
-        border-color: inherit;
-    }
-
-    &::placeholder {
-        color: #B6B6B6;
-    }
-}
-
-footer {
-    background-color: $text-dark;
-    margin-top: $fifty-pixel;
-}
-
-footer .row {
-    padding-top: $forty-pixel;
-    padding-bottom: $forty-pixel;
-}
-
-footer .footer-link .item {
-    color: $text-white;
-    text-decoration: none;
-    padding-left: $thirty-pixel;
-
-    &:hover {
-        color: $hover-white-color;
-    }
-}
-
-@media (min-width: $max-width-container) {
-    .container {
-        max-width: $max-width-container;
-    }
-}
-
-@media (max-width: $medium-devices-width) {
-    footer .footer-link .item {
-        padding-left: $zero-pixel;
-        padding-top: $five-pixel;
-    }
-
-    footer .row {
-        padding: $thirty-pixel;
-    }
-
-    footer .footer-link {
-        padding-top: $ten-pixel;
-    }
-
-    .navbar {
-        padding-left: $zero-pixel;
-        padding-right: $zero-pixel;
-    }
-}
-
-@media (max-width: $small-devices-width) {
-    footer {
-        margin-top: $twenty-pixel;
-    }
-}
+@mixin flex-center-between {
+    display: flex;
+    align-items: center;
+    justify-content: $between;
+};
