--- a/obo-stadium/sass/components/product-details/product-details.scss
+++ b/obo-stadium/sass/components/product-details/product-details.scss
@@ -147,13 +147,42 @@
     border-top: 1px solid $lighter-grey-color;
 }
 
-.products-showcase {
+.products-showcase,
+.instagram-image {
     margin-top: $zero-pixel;
 
     & .title {
         margin-bottom: $twenty-pixel;
+        text-transform: uppercase;
     }
 }
+
+// Override Instafeed
+
+.instaimg-wrap {
+    display: flex;
+    flex-direction: column;
+
+    &:hover {
+        color: inherit
+    }
+}
+
+.instafeed-user {
+    font-size: $fifteen-pixel;
+}
+
+.instafeed-user {
+    margin-top: $eight-pixel;
+}
+
+.fa-heart {
+    color: $main-color;
+}
+
+// Override Slick
+
+
 
 @media (max-width: 768px) {
     .common-info {
@@ -166,6 +195,7 @@
 }
 
 @media (max-width: 465px) {
+
     .btns .size-text,
     .btns .dropdown-arrow {
         font-size: $sixteen-pixel;
@@ -178,6 +208,7 @@
 }
 
 @media (max-width: 375px) {
+
     .btns .size-details,
     .btns .main-content {
         font-size: $twenty-pixel;
