--- a/obo-stadium/sass/news.scss
+++ b/obo-stadium/sass/news.scss
@@ -12,6 +12,33 @@ header {
     margin: $fifty-pixel $zero-pixel 100px $zero-pixel;
 }
 
+.news {
+    background-color: $news-background;
+    display: block;
+    margin-bottom: $fifty-pixel;
+
+    & .row {
+        @include flex-center;
+    }
+
+    & .details {
+        padding-top: $twenty-six-pixel;
+        padding-bottom: $twenty-six-pixel;
+    }
+
+    & .details-small {
+        padding: $twenty-six-pixel $forty-pixel;
+        display: none;
+    }
+
+    & .title {
+        font-size: $twenty-six-pixel;
+        font-weight: bold;
+        margin: $twenty-six-pixel $zero-pixel;
+        text-transform: capitalize;
+    }
+}
+
 @media (max-width: $medium-devices-width) {
     .search-form .form-control {
         margin-bottom: $zero-pixel;
@@ -19,5 +46,15 @@ header {
 
     .navbar {
         padding: $zero-pixel;
+    }
+}
+
+@media (max-width: $large-devices-width) {
+    .news .details {
+        display: none;
+    }
+
+    .news .details-small {
+        display: block;
     }
 }
