--- a/obo-stadium/sass/root.scss
+++ b/obo-stadium/sass/root.scss
@@ -13,6 +13,7 @@ $hover-main-color: #CE2E2F;
 $product-content-background-color: #FAFAFA;
 $product-text-grey: #767676;
 $shadow-background-color: #C4C4C4;
+$news-background: #F2F3F5;
 $green: #12B76D;
 $dark-green: #0f985b;
 $light-green: #CEFBD4;
