--- a/obo-stadium/sass/news.scss
+++ b/obo-stadium/sass/news.scss
@@ -35,6 +35,7 @@ header {
         font-size: $twenty-six-pixel;
         font-weight: bold;
         margin: $twenty-six-pixel $zero-pixel;
+        margin-top: $ten-pixel;
         text-transform: capitalize;
     }
 }
