update buying selling product page

--- a/obo-stadium/sass/components/products.scss
+++ b/obo-stadium/sass/components/products.scss
@@ -20,7 +20,7 @@
 
 .card-body {
     padding: $eleven-pixel $twenty-five-pixel $eleven-pixel $eleven-pixel;
-    background-color: $product-content-background-color;
+    background-color: $product-border-color;
 }
 
 .card-title {
