--- a/obo-stadium/sass/product-details.scss
+++ b/obo-stadium/sass/product-details.scss
@@ -1,7 +1,7 @@
 @import "./root.scss";
 
 .break-section {
-    background-color: $product-content-background-color;
+    background-color: $product-border-color;
     height: $fifteen-pixel;
     margin: $fifty-pixel $zero-pixel;
     border-top: 1px solid $lighter-grey-color;
