--- a/obo-stadium/sass/main.scss
+++ b/obo-stadium/sass/main.scss
@@ -96,6 +96,10 @@ a {
     }
 }
 
+.navbar-light .navbar-nav .nav-link:focus {
+    color: $text-white;
+}
+
 .h2 {
     font-size: $twenty-six-pixel;
     margin-bottom: $zero-pixel;
